Update styles.css, Fix about-me links overflow on small phones

--- a/styles.css
+++ b/styles.css
@@ -566,6 +566,10 @@ nav {
     padding: 3px 8px;
   }
 
+  .about-me__link {
+    font-size: 24px;
+  }
+
   .project__wrapper {
     box-shadow: 0.3rem 0.3rem black;
   }
